// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClayModal custom opener does not close automatically with disableAutoClose 1`] = `
<body
  class="modal-open"
>
  <div />
  <div>
    <div
      aria-hidden="true"
      class="modal-backdrop fade"
    />
    <div
      class="fade modal d-block"
    >
      <div
        aria-labelledby="clay-modal-label-2"
        aria-modal="true"
        class="modal-dialog"
        role="dialog"
        tabindex="-1"
      >
        <div
          class="modal-content"
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`ClayModal custom opener renders inside a container element 1`] = `
<body
  class="modal-open"
>
  <div>
    <div
      id="container"
    >
      container
      <div>
        <div
          aria-hidden="true"
          class="modal-backdrop fade"
        />
        <div
          class="fade modal d-block"
        >
          <div
            aria-labelledby="clay-modal-label-1"
            aria-modal="true"
            class="modal-dialog"
            role="dialog"
            tabindex="-1"
          >
            <div
              class="modal-content"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
